--- a/lesson_22/server/Cargo.toml
+++ b/lesson_22/server/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 stp = { path = "../stp" }
 anyhow = "1.0.51"
 dashmap = "4.0.2"
+tokio = { version = "1.15.0", features = ["net", "macros", "rt-multi-thread", "fs"] }
