--- a/lesson_22/tui/Cargo.toml
+++ b/lesson_22/tui/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 client = { path = "../client" }
 anyhow = "1.0.51"
+tokio = { version = "1.15.0", features = ["net", "macros", "rt-multi-thread", "fs"] }
+async-trait = "0.1.52"
