--- a/lesson_29/Cargo.toml
+++ b/lesson_29/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "smart_house"
+name = "lesson_29"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.32"
-anyhow = "1.0.59"
