--- a/lesson_32/client/Cargo.toml
+++ b/lesson_32/client/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "smart_house"
+name = "client"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.32"
-anyhow = "1.0.59"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+serde_json = "1.0"
+server = { path = "../server" }
