--- a/lesson_33/client/Cargo.toml
+++ b/lesson_33/client/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "smart_house"
+name = "client"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.32"
-anyhow = "1.0.59"
+stp = { path = "../stp" }
+tokio = { version = "1.15.0", features = ["net"] }
