--- a/lesson_33/gui/Cargo.toml
+++ b/lesson_33/gui/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "smart_house"
+name = "gui"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.32"
-anyhow = "1.0.59"
+iced = "0.4"
+client = { path = "../client" }
+tokio = { version = "1.15.0", features = ["net", "macros", "rt-multi-thread", "fs"] }
