--- a/lesson_33/stp/Cargo.toml
+++ b/lesson_33/stp/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "smart_house"
+name = "stp"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.32"
-anyhow = "1.0.59"
+thiserror = "1.0.30"
+tokio = { version = "1.15.0", features = ["net", "macros", "rt-multi-thread"] }
